fixed some footer spacing

--- a/source/css/the.scss
+++ b/source/css/the.scss
@@ -153,10 +153,11 @@ textarea {
       margin: 0;
       padding: 0;
       // padding-right: 33px;
+      // width: 430%;
     }
     li {
       display: inline-block;
-      padding-right: 2%;
+      padding-right: 4%;
       padding-top: 4px;
     }
     // position: absolute;
